--- a/transaction/src/main/resources/static/CSS/com/modal.css
+++ b/transaction/src/main/resources/static/CSS/com/modal.css
@@ -158,13 +158,27 @@
   left: 0;
   width: 100%;
   height: 50px;
-  background: rgb(219, 219, 219);
-  color: white;
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 1000;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  font-size: 13px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000; /* 닫기 버튼 호버 색상 */
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* Header Fixed at Top */
@@ -205,3 +219,101 @@
       height : 100%;
       font-weight: bold;
     }
+    
+/****** 20241231 ********/
+/* 전체 모달 배경 */
+.popup_layer001 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex; /* 중앙 정렬을 위한 Flexbox */
+    justify-content: center;  /* 수평 중앙 정렬 */
+    align-items: center;      /* 수직 중앙 정렬 */
+}
+
+/* 팝업 박스 */
+.popup_box001 {
+    background: #fff;
+    width: 700px;
+    max-width: 85%; /* 작은 화면에서 대응 */
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    animation: fadeIn 0.3s ease-in-out;
+    margin: auto;
+}
+
+/* 팝업 나타나는 애니메이션 */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+/* 헤더 스타일 */
+.header001 {
+    background: #3498db;
+    color: white;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+/* 닫기 버튼 스타일 */
+.close001 {
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.close001:hover {
+    color: #f39c12;
+}
+
+/* 메인 내용 스타일 */
+.main001 {
+    padding: 20px;
+    background: #f4f4f9;
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+/* 푸터 스타일 */
+.footer001 {
+    background: #f9f9f9;
+    padding: 10px;
+    text-align: right;
+}
+
+.popup_btn001 {
+    margin: 10px;
+}
+
+.close-button001 {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s;
+}
+
+.close-button001:hover {
+    background-color: #c0392b;
+}
+
+/****** 20241231 ********/
