--- a/transaction/src/main/resources/templates/view/alctnClnd/alctnClndView.html
+++ b/transaction/src/main/resources/templates/view/alctnClnd/alctnClndView.html
@@ -41,12 +41,12 @@
     </div>
     <div class="container01">    
         <div class="div_title01">조회영역</div>          
-            <div class="calendar_body" style="float: left;">
+            <div class="calendar_body padding_10" style="float: left;">
                 <div id='calendar' ></div>
             </div>
         </div>
         
-        <div  style="float: left; width : 33%; overflow-y: scroll;" class="h800" >
+        <div  style="float: left; width : 33%; overflow-y: scroll;" class="h800 padding_10" >
             <table class="table table-bordered " >
                 <colgroup>
                     <col style="width: 8%;">
