--- a/transaction/src/main/resources/templates/view/hldStckCls/hldStckClsView.html
+++ b/transaction/src/main/resources/templates/view/hldStckCls/hldStckClsView.html
@@ -153,11 +153,11 @@
     </div>
     
     <!-- 레이이어 팝업 시작-->
-    <div class="popup_layer001" id="popup_layer" style="display: none;">
+    <div class="popup_layer001 padding_20" id="popup_layer" style="display: none;">
           <div class="popup_box001">
               <!--팝업 컨텐츠 영역-->
               <div class="popup_cont001">
-                <header class="header001">
+                <header class="header001 h40">
                   <h1 id="stockName">상세 보기 : </h1>                    
                   <span class="close001" onclick="fn_closePop()">&times;</span>
                 </header>
