--- a/transaction/src/main/resources/templates/view/allocation/allocationView.html
+++ b/transaction/src/main/resources/templates/view/allocation/allocationView.html
@@ -133,20 +133,6 @@
                                <td>12월</td>
                             </tr>
                         </table>
-<!--                                                <div>년도</div>
-                                                <div>항목</div>
-                                                <div>01월</div>
-                                                <div>02월</div>
-                                                <div>03월</div>
-                                                <div>04월</div>
-                                                <div>05월</div>
-                                                <div>06월</div>
-                                                <div>07월</div>
-                                                <div>08월</div>
-                                                <div>09월</div>
-                                                <div>10월</div>
-                                                <div>11월</div>
-                                                <div>12월</div>-->
                     </div>
                     <div class="div_container_main" style="overflow-x: auto; white-space: nowrap;">
                         
@@ -160,66 +146,133 @@
                                    <td  th:text="${aSelect.STOCK_NAME}">종목</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.JANUARY}"   th:classappend="${aSelect.JANUARY   eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '01')">01</td>
+                                  <td th:text="${aSelect.JANUARY}"   th:classappend="${aSelect.JANUARY   eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '01')">01</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.FEBRUARY}"  th:classappend="${aSelect.FEBRUARY  eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '02')">02</td>
+                                  <td th:text="${aSelect.FEBRUARY}"  th:classappend="${aSelect.FEBRUARY  eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '02')">02</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.MARCH}"     th:classappend="${aSelect.MARCH     eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '03')">03</td>
+                                  <td th:text="${aSelect.MARCH}"     th:classappend="${aSelect.MARCH     eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '03')">03</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.APRIL}"     th:classappend="${aSelect.APRIL     eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '04')">04</td>
+                                  <td th:text="${aSelect.APRIL}"     th:classappend="${aSelect.APRIL     eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '04')">04</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.MAY}"       th:classappend="${aSelect.MAY       eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '05')">05</td>
+                                  <td th:text="${aSelect.MAY}"       th:classappend="${aSelect.MAY       eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '05')">05</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.JUNE}"      th:classappend="${aSelect.JUNE      eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '06')">06</td>
+                                  <td th:text="${aSelect.JUNE}"      th:classappend="${aSelect.JUNE      eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '06')">06</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.JULY}"      th:classappend="${aSelect.JULY      eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '07')">07</td>
+                                  <td th:text="${aSelect.JULY}"      th:classappend="${aSelect.JULY      eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '07')">07</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.AUGUST}"    th:classappend="${aSelect.AUGUST    eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '08')">08</td>
+                                  <td th:text="${aSelect.AUGUST}"    th:classappend="${aSelect.AUGUST    eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '08')">08</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.SEPTEMBER}" th:classappend="${aSelect.SEPTEMBER eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '09')">09</td>
+                                  <td th:text="${aSelect.SEPTEMBER}" th:classappend="${aSelect.SEPTEMBER eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '09')">09</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.OCTOBER}"   th:classappend="${aSelect.OCTOBER   eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '10')">10</td>
+                                  <td th:text="${aSelect.OCTOBER}"   th:classappend="${aSelect.OCTOBER   eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '10')">10</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.NOVEMBER}"  th:classappend="${aSelect.NOVEMBER  eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '11')">11</td>
+                                  <td th:text="${aSelect.NOVEMBER}"  th:classappend="${aSelect.NOVEMBER  eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '11')">11</td>
                                </tr>
                                <tr>
-                                  <td th:text="${aSelect.DECEMBER}"  th:classappend="${aSelect.DECEMBER  eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '12')">12</td>
+                                  <td th:text="${aSelect.DECEMBER}"  th:classappend="${aSelect.DECEMBER  eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '12')">12</td>
                                </tr>
                             </table>
 <!--                            <div th:text="${aSelect.TRNSCDATE}"    ></div>
                             <div th:text="${aSelect.STOCK_NAME}" ></div>
-                            <div th:text="${aSelect.JANUARY}"   th:classappend="${aSelect.JANUARY   eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '01')"></div>
-                            <div th:text="${aSelect.FEBRUARY}"  th:classappend="${aSelect.FEBRUARY  eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '02')"></div>
-                            <div th:text="${aSelect.MARCH}"     th:classappend="${aSelect.MARCH     eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '03')"></div>
-                            <div th:text="${aSelect.APRIL}"     th:classappend="${aSelect.APRIL     eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '04')"></div>
-                            <div th:text="${aSelect.MAY}"       th:classappend="${aSelect.MAY       eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '05')"></div>
-                            <div th:text="${aSelect.JUNE}"      th:classappend="${aSelect.JUNE      eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '06')"></div>
-                            <div th:text="${aSelect.JULY}"      th:classappend="${aSelect.JULY      eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '07')"></div>
-                            <div th:text="${aSelect.AUGUST}"    th:classappend="${aSelect.AUGUST    eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '08')"></div>
-                            <div th:text="${aSelect.SEPTEMBER}" th:classappend="${aSelect.SEPTEMBER eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '09')"></div>
-                            <div th:text="${aSelect.OCTOBER}"   th:classappend="${aSelect.OCTOBER   eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '10')"></div>
-                            <div th:text="${aSelect.NOVEMBER}"  th:classappend="${aSelect.NOVEMBER  eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '11')"></div>
-                            <div th:text="${aSelect.DECEMBER}"  th:classappend="${aSelect.DECEMBER  eq 0} ? container-disable : container-able" th:onclick="sendCountyOffice( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '12')"></div>-->
+                            <div th:text="${aSelect.JANUARY}"   th:classappend="${aSelect.JANUARY   eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '01')"></div>
+                            <div th:text="${aSelect.FEBRUARY}"  th:classappend="${aSelect.FEBRUARY  eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '02')"></div>
+                            <div th:text="${aSelect.MARCH}"     th:classappend="${aSelect.MARCH     eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '03')"></div>
+                            <div th:text="${aSelect.APRIL}"     th:classappend="${aSelect.APRIL     eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '04')"></div>
+                            <div th:text="${aSelect.MAY}"       th:classappend="${aSelect.MAY       eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '05')"></div>
+                            <div th:text="${aSelect.JUNE}"      th:classappend="${aSelect.JUNE      eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '06')"></div>
+                            <div th:text="${aSelect.JULY}"      th:classappend="${aSelect.JULY      eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '07')"></div>
+                            <div th:text="${aSelect.AUGUST}"    th:classappend="${aSelect.AUGUST    eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '08')"></div>
+                            <div th:text="${aSelect.SEPTEMBER}" th:classappend="${aSelect.SEPTEMBER eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '09')"></div>
+                            <div th:text="${aSelect.OCTOBER}"   th:classappend="${aSelect.OCTOBER   eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '10')"></div>
+                            <div th:text="${aSelect.NOVEMBER}"  th:classappend="${aSelect.NOVEMBER  eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '11')"></div>
+                            <div th:text="${aSelect.DECEMBER}"  th:classappend="${aSelect.DECEMBER  eq 0} ? container-disable : container-able" th:onclick="fn_openPop( [[${aSelect.STOCK_NAME}]],  [[${aSelect.TRNSCDATE}]], '12')"></div>-->
                         </div>
             </div>
       </div>
       <!-- 바차트 시작-->
         <br>
-        <div  th:if="${!#lists.isEmpty(aSelect)}" class="container">
+        <div  th:if="${!#lists.isEmpty(aSelect)}" class="container padding_30" >
           <canvas id="bar_chart"></canvas>
         </div>
         <!-- 바차트 종료-->
     </div><!--   container01 end -->
     
+    
+    
+    
+    
+    <!-- 레이이어 팝업 시작-->
+    <div class="popup_layer001 padding_20" id="popup_layer" style="display: none;">
+         <div class="popup_box001">
+             <!--팝업 컨텐츠 영역-->
+             <div class="popup_cont001">
+               <header class="header002 h40">
+                 <h1 id="t_stockName"></h1>                    
+                 <span class="close001" onclick="fn_closePop()">&times;</span>
+               </header>
+               <main class="main001">
+                   <table>
+                           <tr>
+                               <td>주식 명</td>
+                               <td id="s_stockName">
+                                 <!--<input name="u_stockName" id="u_stockName" type="text" class="full-width-input02 w100_" value="">-->
+                                 <select name="u_stockName" id="u_stockName" class="full-width-input">
+                                 </select>
+                               </td>
+                           </tr>
+                           <tr>
+                               <td>거래일자</td>
+                               <td id="s_trnscdate">
+                                  <input type="date" id="u_trnscdate" class="full-width-input03_data " style="width:97%">
+                               </td>
+                           </tr>                        
+                           <tr>
+                              <td>배당금</td>
+                              <td id="s_dividend">
+                                <input type="text" id="u_dividend" name="u_dividend" class="full-width-input02 w100_" value="">
+                              </td>
+                           </tr>
+                           <tr>
+                              <td>거래금액</td>
+                              <td id="s_amont">
+                                  <input type="text" id="u_amont" name="u_amont" class="full-width-input02 w100_" value="">
+                              </td>
+                           </tr>
+                           <tr>
+                              <td>파일명</td>
+                              <td id="s_fileName">
+                                  <input type="file" class="form-control" id="I_FILE" name="I_FILE"  accept="image/*" onchange="readURL(this, 'I_IMG');"  >
+                              </td>
+                           </tr>                          
+                          <tr>
+                            <td>이미지</td>
+                            <td id="imge1">                            
+                                <img id="image1" style="min-height : 300px; max-height : 300px; width : 100%;">
+                            </td>
+                          </tr>
+                   </table>
+               </main>  
+       
+             </div>
+             <footer class="footer001">
+             <!--팝업 버튼 영역-->
+             <div class="popup_btn001" >
+                 <input type="button" class="update-button001" onclick="allocationInsert01();" value="저장"/>
+                 <input type="button" class="close-button001"  onclick="fn_closePop()" value="닫기"/>
+             </div>
+             </footer>
+         </div>
+       </div>
+    <!-- 레이이어 팝업 종료-->
 </body>
 </html>
