--- a/transaction/src/main/resources/templates/view/allocation/allocationView.html
+++ b/transaction/src/main/resources/templates/view/allocation/allocationView.html
@@ -81,7 +81,7 @@
                 &nbsp;                &nbsp;                &nbsp;
                 <button  class="search-button">검색</button><!--                    onclick="search()"-->
             </form>
-              <button  class="insert-button" style="transform: translateY(45%); height: 30px;" onclick="fn_inputModalCall();">등록</button><!--                    onclick="search()"-->
+              <button  class="insert-button" style="transform: translateY(45%); height: 30px;" onclick="fn_openPop();">등록</button><!--                    onclick="search()"-->
         </div>
     </div>
     
@@ -257,7 +257,7 @@
                           <tr>
                             <td>이미지</td>
                             <td id="imge1">                            
-                                <img id="image1" style="min-height : 300px; max-height : 300px; width : 100%;">
+                                <img id="I_IMG" style="min-height : 300px; max-height : 300px; width : 100%;">
                             </td>
                           </tr>
                    </table>
