--- a/transaction/src/main/resources/templates/view/layout/menuBar.html
+++ b/transaction/src/main/resources/templates/view/layout/menuBar.html
@@ -43,8 +43,9 @@
 </head>
 <body>
     <ul class="ul_01">
-      <li class="li_01"><a href="/">홈</a></li>
-      <li class="li_01"><a href="/stckInfo/stckInfoView">주식정보</a></li>
+      <li class="li_01"><a href="/dshb/dshbView">                               홈</a></li>
+      <li class="li_01"><a href="/hldStckCls/hldStckClsView">               주식통합</a></li>
+      <li class="li_01"><a href="/stckInfo/stckInfoView">                   주식정보</a></li>
       <li class="li_01"><a href="/stckDlng/stckDlngView">                주식거래정보</a></li>	  
 	  <li class="li_01"><a href="/allocation/allocationView">            배당내역   </a></li>
 	  <li class="li_01"><a href="/weeklyAllocation/weeklyAllocationView">주간배당내역</a></li>
