--- a/transaction/src/main/resources/static/CSS/com/com.css
+++ b/transaction/src/main/resources/static/CSS/com/com.css
@@ -302,6 +302,12 @@ th {
 /*********** 버튼 *********************/
 
 /*********** 가로 크기 *********************/
+.w800{
+    width: 800px;
+}
+.w500{
+    width: 500px;
+}
 .w300{
     width: 300px;
 }
@@ -553,3 +559,70 @@ th {
     padding : 10px;
 }
 /*********************************************/
+
+/******************대시보드************************/
+
+.dshb_container {
+    max-width: 2000px;
+    margin: auto;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.dshb_header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.dshb_summary {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.dshb_card {
+    background: #e7f3fe;
+    border: 1px solid #b8daff;
+    border-radius: 8px;
+    padding: 5px;
+    flex: 1;
+    margin: 0 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.dshb_charts {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.dshb_chart {
+    background: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    flex: 1;
+    margin: 0 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.dshb_pie-chart-placeholder, 
+.dshb_bar-chart-placeholder, 
+.dshb_trend-placeholder {
+    height: 280px;
+    background: #e7ecef;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: #6c757d;
+}
+
+.dshb_trend {
+    margin-top: 20px;
+}
+
+/******************대시보드************************/
