--- a/transaction/src/main/resources/static/CSS/com/com.css
+++ b/transaction/src/main/resources/static/CSS/com/com.css
@@ -626,3 +626,8 @@ th {
 }
 
 /******************대시보드************************/
+
+.disabled-td {
+  pointer-events: none;  /* 클릭 및 포커스 비활성화 */
+  opacity: 0.5;          /* 시각적으로 비활성화 표시 */
+}
