--- a/transaction/src/main/resources/templates/view/dshb/dshbView.html
+++ b/transaction/src/main/resources/templates/view/dshb/dshbView.html
@@ -50,13 +50,13 @@
                     
                     <section class="dshb_charts">
                         <div class="dshb_chart pie-chart">
-                            <h2>투자 종목</h2>
+                            <h2>투자 종목 주식 수</h2>
                             <div class="dshb_pie-chart-placeholder" >
                                 <canvas id="chart02"></canvas>
                             </div>
                         </div>
                         <div class="dshb_chart bar-chart">
-                            <h2>개별 배당금</h2>
+                            <h2>개별 누적 배당금</h2>
                             <div class="dshb_bar-chart-placeholder">                            
                                 <canvas id="chart03"></canvas>
                             </div>
@@ -64,7 +64,7 @@
                     </section>
                     
                     <section class="dshb_trend">
-                        <h2>배당금 추세</h2>
+                        <h2>배당금 추세(최근 2년간)</h2>
                         <div class="dshb_trend-placeholder">
                            <canvas id="chart04" style="width: 1500px;"></canvas>
                         </div>
