--- a/transaction/src/main/resources/templates/view/hldStckCls/hldStckClsView.html
+++ b/transaction/src/main/resources/templates/view/hldStckCls/hldStckClsView.html
@@ -97,7 +97,7 @@
                             <td >
                                 <input class="full-width-input" type="text" th:value="${slist.DIVIDEND_AMOUNT}">
                             </td><!--배당금-->
-                            <td >
+                            <td class="disabled-td">
                                 <input class="full-width-input" type="text" th:value="${#strings.substring(slist.MDFCNYMD, 0, 10)}" readonly>
                             </td><!--등록일자-->
                             
