--- a/transaction/src/main/resources/templates/view/stckDlng/stckDlngView.html
+++ b/transaction/src/main/resources/templates/view/stckDlng/stckDlngView.html
@@ -74,7 +74,7 @@
                                         </th:block>
                                     </select>
                                 </td>
-                                <td>                    <!--주식티커 -->
+                                <td class="disabled-td">                    <!--주식티커 -->
                                     <!--<input type="text"       id="TIKER"   name="TIKER">-->    
                                     <select id="TIKER_SELECT_BOX"  name="TIKER_SELECT_BOX" class="full-width-input" readOnly>
                                         <option value="">선택</option>
@@ -86,7 +86,7 @@
                                 <td>                    <!--수량 -->
                                     <input type="text" placeholder="주식수"        id="STCKCNT"   name="STCKCNT" class="full-width-input">    
                                 </td>
-                                <td>                    <!--배당주기 -->
+                                <td  class="disabled-td">                    <!--배당주기 -->
                                     <!--<input type="text"     id="DVDNCYC"   name="DVDNCYC">-->    
                                     <!--<input type="text" placeholder="주식명"        id="STCNM"   name="STCNM">    -->
                                     <select id="DVDNCYC_SELECT_BOX"  name="DVDNCYC_SELECT_BOX" class="full-width-input"
