--- a/transaction/src/main/resources/templates/view/alctnClnd/stckClndView.html
+++ b/transaction/src/main/resources/templates/view/alctnClnd/stckClndView.html
@@ -25,39 +25,68 @@
         <div class="div_title01">조회영역</div>          
             <div class="div_body01">
                 <div class="div_body02">
-                    <div class="calendar-container">
-                              <div class="calendar-header">
-                              <input type="button" onclick="fn_prevBtn('year')" value="이전">
-                              <h2 id="currentMonth"></h2>                          
-                              <input type="button" onclick="fn_nextBtn('year')" value="다음">
-                              </div>
-                              <div class="calendar-days">
-                                  <div class="day01"></div>
-                                  <div class="day01"></div>
-                                  <div class="day01"></div>
-                              </div>
-                              <div class="calendar-dates" id="calendarDates"></div>
-                              <div class="calendar-header"></div>
-                          </div>
-                          
-                          <div class="calendar-container01">
-                              <div class="calendar-header">
-                                  <input type="button" onclick="fn_prevBtn('month')" value="이전">
-                                  <h2 id="currentMonth01"></h2>                          
-                                  <input type="button" onclick="fn_nextBtn('month')" value="다음">
-                              </div>
-                              <div class="calendar-days01">
-                                  <div class="day01 font_red">일</div>
-                                  <div class="day01">월</div>
-                                  <div class="day01">화</div>
-                                  <div class="day01">수</div>
-                                  <div class="day01">목</div>
-                                  <div class="day01">금</div>
-                                  <div class="day01 font_blue">토</div>
-                              </div>
-                              <div class="calendar-dates01" id="calendarDates01"></div>
-                              <div class="calendar-header"></div>
-                          </div>
+
+                    
+<!--추가-->
+<div class="container">
+    <!-- 연도별 달력 (바둑판 형식) -->
+    <div class="calendar">
+        <div class="calendar-header">
+            <button onclick="changeYear(-1)">〈</button>
+            <h2 id="currentYear"></h2>
+            <button onclick="changeYear(1)">〉</button>
+        </div>
+        <div class="calendar-body grid-3x4" id="yearCalendar"></div>
+    </div>
+
+    <!-- 월별 달력 (요일 가로) -->
+    <div class="calendar">
+        <div class="calendar-header">
+            <button onclick="changeMonth(-1)">〈</button>
+            <h2 id="currentMonth"></h2>
+            <button onclick="changeMonth(1)">〉</button>
+        </div>
+        <div class="calendar-days">
+            <div class="day">일</div>
+            <div class="day">월</div>
+            <div class="day">화</div>
+            <div class="day">수</div>
+            <div class="day">목</div>
+            <div class="day">금</div>
+            <div class="day">토</div>
+        </div>
+        <div class="calendar-body grid-7" id="monthCalendar"></div>
+    </div>    
+    <div class="calendar">    
+        <div class="calendar-header">
+           <h2 id="">목록</h2>
+        </div>
+        
+        <div >
+            <table>
+                <colgroup>
+                     <col style="width: 10%;">
+                     <col style="width: 1%;">
+                     <col style="width: 4%;">
+                     <col style="width: 3%;">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <td >주식명</td>
+                        <td>주식티커</td>
+                        <td>배당금</td>
+                         <td>배당일</td>
+                    </tr>
+                </thead>
+                <tbody id="tbody_00">
+                    
+                </tbody>
+            </table>
+        </div>
+     </div>
+</div>
+<!--추가-->
+                    
                 </div>
                 
             </div>
