--- a/transaction/src/main/resources/templates/view/hldStckCls/hldStckClsView.html
+++ b/transaction/src/main/resources/templates/view/hldStckCls/hldStckClsView.html
@@ -57,9 +57,9 @@
                         <tr>
                             <th style="display: none;">순번</th>
                             <th >주식명</th>
-                            <th >주식수</th>
-                            <th >배당주기</th>
-                            <th >매입금</th>
+                            <th onclick="sortTable(this, 2)">주식수</th>
+                            <th onclick="sortTable(this, 3)">배당주기</th>
+                            <th onclick="sortTable(this, 4)">매입금</th>
                             
                             <th >배당금</th>
                             <th >일자</th>
