--- a/transaction/src/main/resources/templates/view/alctnClnd/stckClndView.html
+++ b/transaction/src/main/resources/templates/view/alctnClnd/stckClndView.html
@@ -1,97 +1,91 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http//www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"  >
-    <title>테스트</title>	
-    <link rel="stylesheet" type="text/css" th:href="@{/CSS/com/modal.css}">        
-    <link rel="stylesheet" type="text/css" th:href="@{/CSS/com/com.css}">    
-    <link rel="stylesheet" type="text/css" th:href="@{/CSS/alctnClnd/stckClnd.css}">    
-    <script type="text/javascript" th:src="@{/JS/utlt/com.js}"></script>  
-    <script type="text/javascript" th:src="@{/JS/alctnClnd/stckClnd.js}"></script>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>달력 테스트</title>   
+
+    <link rel="stylesheet" type="text/css" th:href="@{/CSS/com/modal.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/CSS/com/com.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/CSS/alctnClnd/stckClnd.css}">
+
+    <script type="text/javascript" th:src="@{/JS/utlt/com.js}"></script>
+    <script type="text/javascript" th:src="@{/JS/alctnClnd/stckClnd.js}"></script> 
 </head>
 <body>
+
     <h4>
         <ul class="nav flex-column" th:replace="view/layout/menuBar.html"></ul>
     </h4>
-    
-    <div class="container01"> 
+
+    <div class="container01">
         <div class="div_title01">검색영역</div>
-            <div class="div_body01" style="position: relative;">
-             </div>
-        </div>
-    </div>
-    <div class="container01">    
-        <div class="div_title01">조회영역</div>          
-            <div class="div_body01">
-                <div class="div_body02">
-
-                    
-<!--추가-->
-<div class="container">
-    <!-- 연도별 달력 (바둑판 형식) -->
-    <div class="calendar">
-        <div class="calendar-header">
-            <button onclick="changeYear(-1)">〈</button>
-            <h2 id="currentYear"></h2>
-            <button onclick="changeYear(1)">〉</button>
-        </div>
-        <div class="calendar-body grid-3x4" id="yearCalendar"></div>
+        <div class="div_body01" style="position: relative;"></div>
     </div>
 
-    <!-- 월별 달력 (요일 가로) -->
-    <div class="calendar">
-        <div class="calendar-header">
-            <button onclick="changeMonth(-1)">〈</button>
-            <h2 id="currentMonth"></h2>
-            <button onclick="changeMonth(1)">〉</button>
-        </div>
-        <div class="calendar-days">
-            <div class="day">일</div>
-            <div class="day">월</div>
-            <div class="day">화</div>
-            <div class="day">수</div>
-            <div class="day">목</div>
-            <div class="day">금</div>
-            <div class="day">토</div>
-        </div>
-        <div class="calendar-body grid-7" id="monthCalendar"></div>
-    </div>    
-    <div class="calendar">    
-        <div class="calendar-header">
-           <h2 id="">목록</h2>
-        </div>
-        
-        <div >
-            <table>
-                <colgroup>
-                     <col style="width: 5%;">                    
-                     <col style="width: 10%;">
-                     <col style="width: 4%;">
-                     <col style="width: 3%;">
-                </colgroup>
-                <thead>
-                    <tr>                    
-                        <td>배당일</td>
-                        <td >주식명</td>
-                        <td>주식티커</td>
-                        <td>배당금</td>
-                    </tr>
-                </thead>
-                <tbody id="tbody_00">
-                    
-                </tbody>
-            </table>
-        </div>
-     </div>
-</div>
-<!--추가-->
-                    
-                </div>
-                
-            </div>
+    <div class="container01">
+        <div class="div_title01">조회영역</div>
+        <div class="div_body01">
+            <div class="div_body02">
+
+                <div class="container">
+
+                    <div class="calendar">
+                        <div class="calendar-header">
+                            <button id="prevYearBtn">〈</button> 
+                            <h2 id="currentYear"></h2>
+                            <button id="nextYearBtn">〉</button>
+                        </div>
+                        <div class="calendar-body grid-3x4" id="yearCalendar"></div>
+                    </div>
+
+                    <div class="calendar">
+                        <div class="calendar-header">
+                            <button id="prevMonthBtn">〈</button> 
+                            <h2 id="currentMonth"></h2>
+                            <button id="nextMonthBtn">〉</button>
+                        </div>
+                        <div class="calendar-days">
+                            <div class="day">일</div>
+                            <div class="day">월</div>
+                            <div class="day">화</div>
+                            <div class="day">수</div>
+                            <div class="day">목</div>
+                            <div class="day">금</div>
+                            <div class="day">토</div>
+                        </div>
+                        <div class="calendar-body grid-7" id="monthCalendar"></div>
+                    </div>
+
+                    <div class="calendar">
+                        <div class="calendar-header">
+                            <h2>목록</h2>
+                        </div>
+                        <div>
+                            <table>
+                                <colgroup>
+                                    <col style="width: 5%;">
+                                    <col style="width: 10%;">
+                                    <col style="width: 4%;">
+                                    <col style="width: 3%;">
+                                </colgroup>
+                                <thead>
+                                    <tr>
+                                        <th>배당일</th>
+                                        <th>주식명</th>
+                                        <th>주식티커</th>
+                                        <th>배당금</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbody_00">
+                                    </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                </div> </div>
         </div>
     </div>
-    
+
 </body>
 </html>
