--- a/transaction/src/main/resources/templates/view/stckDlng/stckDlngView.html
+++ b/transaction/src/main/resources/templates/view/stckDlng/stckDlngView.html
@@ -60,7 +60,11 @@
                                     </select>
                                 </td>
                                 <td>                    <!--매수여부 -->
-                                    <input type="checkbox"   id="BYNGYN"   name="BYNGYN" class="full-width-input"     checked>
+                                    <!--<input type="checkbox"   id="BYNGYN"   name="BYNGYN" class="full-width-input"     checked>-->                                    
+                                    <select id="BYNGYN"  name="BYNGYN" class="full-width-input">
+                                        <option value="Y">매수</option>
+                                        <option value="N">매도</option>
+                                    </select>
                                 </td>
                                 <td>                    <!--거래일자 -->
                                     <input type="date"       id="DLNGYMD"   name="DLNGYMD" class="full-width-input" th:value="${#temporals.format(#temporals.createNow(), 'yyyy-MM-dd')}">    
@@ -121,32 +125,34 @@
    <div class="    container01">     
     <div class="div_title01">검색영역</div>      
     <div class="div_body01">
-       <form class="form02"  th:action="@{/stckDlng/stckDlngSelectPage.do}" method="get">      
+        <form class="form02" th:action="@{/stckDlng/stckDlngSelectPage.do}" method="get">
             <label for="구분">구분 :</label>
-                    <select name="S_CMPR" id="S_CMPR"         class="full-width-input01">
-                      <option value=""                th:selected="'' == ${parameter?.S_CMPR}">전체</option>                            
-                      <option value="1"               th:selected="'1' == ${parameter?.S_CMPR}">연금저축</option>                            
-                      <option value="2"               th:selected="'2' == ${parameter?.S_CMPR}">퇴직연금</option>                          
-                      <option value="3"               th:selected="'3' == ${parameter?.S_CMPR}">일반계좌</option>
-                    </select>
+            <select name="S_CMPR" id="S_CMPR" class="full-width-input01">
+                <option value="" th:selected="'' == ${parameter?.S_CMPR}">전체</option>
+                <option value="1" th:selected="'1' == ${parameter?.S_CMPR}">연금저축</option>
+                <option value="2" th:selected="'2' == ${parameter?.S_CMPR}">퇴직연금</option>
+                <option value="3" th:selected="'3' == ${parameter?.S_CMPR}">일반계좌</option>
+            </select>
+            
             <label for="일자">일자 :</label>
-                    <input type="date" id="S_START_YMD" name="S_START_YMD" class="full-width-input01_data" th:value="${not #strings.isEmpty(S_START_YMD)} ? ${S_START_YMD} : ${#temporals.format(#temporals.createNow().minusDays(6), 'yyyy-MM-dd')}">
+            <input type="date" id="S_START_YMD" name="S_START_YMD" class="full-width-input01_data" th:value="${not #strings.isEmpty(parameter?.S_START_YMD)} ? ${parameter?.S_START_YMD} : ${#temporals.format(#temporals.createNow().minusDays(6), 'yyyy-MM-dd')}">
             <label for="-"> - </label>
-                     <input type="date" id="S_END_YMD" name="S_END_YMD" class="full-width-input01_data" th:value="${not #strings.isEmpty(S_END_YMD)} ? ${S_END_YMD} : ${#temporals.format(#temporals.createNow(), 'yyyy-MM-dd')}">
+            <input type="date" id="S_END_YMD" name="S_END_YMD" class="full-width-input01_data" th:value="${not #strings.isEmpty(parameter?.S_END_YMD)} ? ${parameter?.S_END_YMD} : ${#temporals.format(#temporals.createNow(), 'yyyy-MM-dd')}">
+            
             <label for="매수/매도">매수/매도</label>
-                <select name="S_BYNGYN" id="S_BYNGYN"         class="full-width-input01">
-                  <option value="Y">매수</option>                            
-                  <option value="N">매도</option>                          
-                </select>
+            <select name="S_BYNGYN" id="S_BYNGYN" class="full-width-input01">
+                <option value="Y" th:selected="'Y' == ${parameter?.S_BYNGYN}">매수</option>
+                <option value="N" th:selected="'N' == ${parameter?.S_BYNGYN}">매도</option>
+            </select>
+            
             <label for="주식명">주식명</label>
-                  <input type="text" id="S_STCNM" name="S_STCNM" placeholder="주식명" class="full-width-input01" th:value="${parameter?.S_STCNM}">
-                  
+            <input type="text" id="S_STCNM" name="S_STCNM" placeholder="주식명" class="full-width-input01" th:value="${parameter?.S_STCNM}">
+            
             <label for="배당주기">배당주기</label>
-            <input type="text"  name="S_DVDNCYC" placeholder="배당주기" class="full-width-input01" >
-            <button  class="search-button">검색</button><!--                    onclick="search()"-->
+            <input type="text" name="S_DVDNCYC" placeholder="배당주기" class="full-width-input01" th:value="${parameter?.S_DVDNCYC}">
+            <button class="search-button">검색</button>
             <input type="checkbox" id="formCheck" onclick="fn_formCheck();"><label for="formCheck">숨기기</label>
-           </div>
-         </form>   
+        </form>
      </div>
    </div>
      
